update test and swagger
